NTI-651 - fixed an issue where the video input text would be vertically misaligned and cut off in safari.

--- a/src/main/js/modeled-content/components/Editor.scss
+++ b/src/main/js/modeled-content/components/Editor.scss
@@ -86,6 +86,7 @@
 				font-size: 0.875rem;
 				font-weight: normal;
 				margin: 0;
+				line-height: 1.5;
 			}
 
 			.buttons {
